Add the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SQLite testing file
+app.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -45,7 +48,6 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-.pytest_cache/
 
 # Translations
 *.mo
@@ -53,8 +55,9 @@ coverage.xml
 
 # Django stuff:
 *.log
+.static_storage/
+.media/
 local_settings.py
-db.sqlite3
 
 # Flask stuff:
 instance/
@@ -102,3 +105,8 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+.vscode
+
+# Test artifacts
+.pytest_cache
