--- a/backlog-ballot-openshift-template.yml
+++ b/backlog-ballot-openshift-template.yml
@@ -14,9 +14,9 @@ parameters:
   value: backlogballot
 - name: POSTGRESQL_DATABASE
   value: backlogballot
-- name: JIRA_QUERY
+- name: BACKLOG_BALLOT_QUERY
   value: project=factory and statusCategory != Done and labels=NeedsVoting
-- name: JIRA_SERVER
+- name: BACKLOG_BALLOT_JIRA_SERVER
   value: https://projects.engineering.redhat.com
 - name: BACKLOG_BALLOT_BACKEND
   value: http://backend:5000
@@ -315,10 +315,10 @@ objects:
                 image: 172.30.1.1:5000/backlog-ballot/backlog-ballot-issue-fetcher:latest
                 imagePullPolicy: Always
                 env:
-                  - name: JIRA_QUERY
-                    value: ${JIRA_QUERY}
-                  - name: JIRA_SERVER
-                    value: ${JIRA_SERVER}
+                  - name: BACKLOG_BALLOT_QUERY
+                    value: ${BACKLOG_BALLOT_QUERY}
+                  - name: BACKLOG_BALLOT_JIRA_SERVER
+                    value: ${BACKLOG_BALLOT_JIRA_SERVER}
                   - name: BACKLOG_BALLOT_BACKEND
                     value: ${BACKLOG_BALLOT_BACKEND}
             restartPolicy: OnFailure
