--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.1.2",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "ng-bootstrap": "^1.6.3",
     "ng2-bootstrap": "^1.6.3",
