--- a/open.paas.params.env
+++ b/open.paas.params.env
@@ -4,3 +4,4 @@ BACKLOG_BALLOT_QUERY=project=factory and statusCategory != Done and labels=Needs
 BACKLOG_BALLOT_JIRA_SERVER=https://projects.engineering.redhat.com
 BACKEND_ROUTE=https://backend-factory-backlog-ballot.open.paas.redhat.com/api/
 FRONTEND_HOSTNAME=factory-backlog.open.paas.redhat.com
+ISSUE_FETCHER_IMAGE=docker-registry.default.svc:5000/factory-backlog-ballot/backlog-ballot-issue-fetcher
