Update query for factory issues
We want to show all issues with the label

--- a/open.paas.params.env
+++ b/open.paas.params.env
@@ -1,6 +1,6 @@
 POSTGRESQL_USER=factorybacklogballot
 POSTGRESQL_DATABASE=factorybacklogballot
-BACKLOG_BALLOT_QUERY=project=factory and statusCategory != Done and labels=NeedsVoting
+BACKLOG_BALLOT_QUERY=project=factory and labels=NeedsVoting
 BACKLOG_BALLOT_JIRA_SERVER=https://projects.engineering.redhat.com
 BACKEND_ROUTE=https://backend-factory-backlog-ballot.int.open.paas.redhat.com/
 FRONTEND_HOSTNAME=factory-backlog.int.open.paas.redhat.com
