--- a/open.paas.params.env
+++ b/open.paas.params.env
@@ -5,3 +5,4 @@ BACKLOG_BALLOT_JIRA_SERVER=https://projects.engineering.redhat.com
 BACKEND_ROUTE=https://backend-factory-backlog-ballot.int.open.paas.redhat.com/
 FRONTEND_HOSTNAME=factory-backlog.int.open.paas.redhat.com
 ISSUE_FETCHER_IMAGE=docker-registry.default.svc:5000/factory-backlog-ballot/backlog-ballot-issue-fetcher
+TITLE=Factory 2.0 Backlog
