--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "ng-bootstrap": "^1.6.3",
     "ng2-bootstrap": "^1.6.3",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-pagination": "^3.1.1",
     "patternfly": "^3.51.1",
     "patternfly-ng": "^3.10.3",
     "rxjs": "^6.0.0",
